[package]
name = "ignite-code-plugin"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ignite-plugin-utils = { version = "0.1", path = "../ignite-plugin-utils" }
