[package]
name = "ignite-composite-renderer-plugin-utils"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Set of utilities for Rust side Ignite Composite Renderer Plugin"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/ignite-plugins"
repository = "https://github.com/PsichiX/ignite-plugins"
documentation = "https://docs.rs/ignite-composite-renderer-plugin-utils"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
oxygengine-composite-renderer = { version = "0.14", features = ["web"] }
