[package]
name = "ignite-composite-renderer-plugin-gui"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
lazy_static = "1.4"
oxygengine-composite-renderer = { version = "0.13", features = ["web"] }
oxygengine-composite-renderer-backend-web = { version = "0.13", features = ["web"] }
typid = "1"
