[package]
name = "~%IGNITE_ID%~"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ignite-plugin-utils = { version = "0.1", path = "../ignite-plugin-utils" }
